--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hover-animation": "^2.1.1",
+    "react-icons": "^4.8.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-paypal-button-v2": "^2.6.2",
     "react-redux": "^8.0.5",
