--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "proxy": "http://localhost:10000",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
-    "@emotion/react": "^11.10.5",
+    "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@formspree/react": "^2.4.1",
     "@fortawesome/fontawesome-free": "^6.2.1",
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.4",
     "@react-google-maps/api": "^2.17.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
